# krystalball

./: .gitignore  CLAUDE.md  README.md  config.py  config.yaml  frame_codec.py  idea.md  main.py  model.py  pyproject.toml  server.py  training.py  webcam.py
static/: app.js  index.html  style.css
